// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Close> should close the modal 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰19"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    <button
      aria-controls="🅰19"
      aria-expanded="true"
      aria-label="Close"
      data-testid="close"
      role="button"
      tabindex="0"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="🅰19"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="open"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Close> should close the modal: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰19"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    <button
      aria-controls="🅰19"
      aria-expanded="false"
      aria-label="Close"
      data-testid="close"
      role="button"
      tabindex="0"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="🅰19"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="closed"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Modal> should have a custom id 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="foobar"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="foobar"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Modal> should provide context to function child 1`] = `
Object {
  "close": [Function],
  "id": "🅰1",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰10"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰10"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰10"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰10"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰10"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="custom"
    id="🅰6"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰6"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="custom"
    id="🅰6"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰6"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="closed"
    id="🅰7"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰7"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="open"
    id="🅰7"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰7"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰8"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0); display: none;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰8"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰8"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0); display: block;"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰8"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰5"
    role="dialog"
    style="visibility: hidden; font-size: 2rem; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰5"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰5"
    role="dialog"
    style="visibility: visible; font-size: 2rem; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰5"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰9"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰9"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰9"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰9"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰3"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰3"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰3"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰3"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰3"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰3"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰2"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰2"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰2"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰2"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should override aria-modal 1`] = `
<DocumentFragment>
  <div
    aria-controls="🅰15"
    aria-expanded="false"
    aria-haspopup="dialog"
    aria-modal="true"
    role="button"
    tabindex="0"
  >
    Hello world
  </div>
</DocumentFragment>
`;

exports[`<Target> should override role 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰14"
    role="other-role"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
</DocumentFragment>
`;

exports[`<Target> should render into a portal by custom selector 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      id="🅰13"
      role="dialog"
      style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰13"
      aria-expanded="true"
      aria-haspopup="dialog"
      role="button"
      tabindex="0"
    >
      open me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by custom selector object 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      id="🅰12"
      role="dialog"
      style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰12"
      aria-expanded="true"
      aria-haspopup="dialog"
      role="button"
      tabindex="0"
    >
      open me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by default ID 1`] = `
<body>
  <div
    id="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      id="🅰11"
      role="dialog"
      style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="🅰11"
      aria-expanded="true"
      aria-haspopup="dialog"
      role="button"
      tabindex="0"
    >
      open me
    </button>
  </div>
</body>
`;

exports[`<Target> shouldn't close on escape key if prop is false: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰4"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰4"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰4"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰4"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰4"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰4"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰16"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰16"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="closed"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰16"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰16"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="open"
    role="button"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="🅰17"
    role="dialog"
    style="visibility: hidden; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰17"
    aria-expanded="false"
    aria-haspopup="dialog"
    role="button"
    style="display: none;"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    id="🅰17"
    role="dialog"
    style="visibility: visible; position: fixed; margin: auto; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0);"
  >
    Hello world
  </div>
  <button
    aria-controls="🅰17"
    aria-expanded="true"
    aria-haspopup="dialog"
    role="button"
    style="display: block;"
    tabindex="0"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should override aria-haspopup 1`] = `
<DocumentFragment>
  <div
    aria-controls="🅰18"
    aria-expanded="false"
    aria-haspopup="grid"
    role="button"
    tabindex="0"
  >
    Hello world
  </div>
</DocumentFragment>
`;

exports[`useModal() should return context 1`] = `
Object {
  "close": [Function],
  "id": "🅰22",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;
